website/websites/gp4/code/spectralnorm-icpp.log
BUILD COMMANDS FOR: spectralnorm.icpp

Thu Oct  6 22:00:20 PDT 2005

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  spectralnorm.c++ -o spectralnorm.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc spectralnorm.c++.o -o spectralnorm.icpp_run -O3 -ip -static -unroll  
/usr/include/c++/4.0.2/cmath(353): error: identifier "__builtin_powi" is undefined
    { return __builtin_powi(__x, __i); }
             ^

/usr/include/c++/4.0.2/cmath(357): error: identifier "__builtin_powif" is undefined
    { return __builtin_powif(__x, __n); }
             ^

/usr/include/c++/4.0.2/cmath(361): error: identifier "__builtin_powil" is undefined
    { return __builtin_powil(__x, __n); }
             ^

compilation aborted for spectralnorm.c++ (code 2)
make[2]: [spectralnorm.icpp_run] Error 2 (ignored)
rm: cannot remove `spectralnorm.c++.o': No such file or directory
rm: cannot remove `spectralnorm.o': No such file or directory
make[2]: [spectralnorm.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

spectralnorm.icpp_run %A
Error, could not exec spectralnorm.icpp_run 100 (No such file or directory)
PATH=/opt/shootout/shootout/bench/spectralnorm:/opt/shootout/shootout/bench/spectralnorm/tmp:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
